--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,70 +1,72 @@
-# name: Test, Build and Push
-# # This will run when a tag is pushed
-# # It will only build and push to the DockerHub if the branch is main
-# 
-# on:
-#   push:
-#     tags:
-#       - 'v*'
-# 
-# jobs:
-#   test_package:
-#     runs-on: ubuntu-latest
-# 
-#     steps:
-#       - name: Install Go
-#         uses: actions/setup-go@v2
-#         with:
-#           go-version: 1.16.4
-# 
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-# 
-#       - name: Fetch required Go modules
-#         run: go mod download
-# 
-#       - name: Build
-#         run: go build -v ./...
-# 
-#       - name: Run functional tests
-#         run: go test -v ./...
-# 
-#   build_docker_image:
-#     needs: test_package
-#     runs-on: ubuntu-latest
-#     steps:
-# 
-#       - name: Checkout
-#         uses: actions/checkout@v2
-# 
-#       - name: Docker meta
-#         id: meta
-#         uses: docker/metadata-action@v4
-#         with:
-#           images: dpgraham4401/dpgraham
-# 
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v2
-# 
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v2
-# 
-#       - name: Login to DockerHub
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-# 
-#       - name: Build and push
-#         uses: docker/build-push-action@v3
-#         with:
-#           context: .
-#           platforms: linux/amd64,linux/arm64
-#           push: true
-#           tags: ${{ steps.meta.outputs.tags }}
-#           labels: ${{ steps.meta.outputs.labels }}
-# 
-#   deploy_docker_image:
+ name: Test, Build, Push & Deploy
+ # This will run when a tag is pushed to main
+
+ on:
+   push:
+     tags:
+       - 'v*'
+
+ env:
+   IMAGE_NAME: dpg-server
+
+ jobs:
+   test_package:
+     runs-on: ubuntu-latest
+
+     steps:
+       - name: Install Go
+         uses: actions/setup-go@v2
+         with:
+           go-version: 1.16.4
+
+       - name: Checkout code
+         uses: actions/checkout@v2
+
+       - name: Fetch required Go modules
+         run: go mod download
+
+       - name: Build
+         run: go build -v ./...
+
+       - name: Run functional tests
+         run: go test -v ./...
+
+   build_docker_image:
+     needs: test_package
+     runs-on: ubuntu-latest
+     steps:
+
+       - name: Checkout
+         uses: actions/checkout@v2
+
+       - name: Docker meta
+         id: meta
+         uses: docker/metadata-action@v4
+         with:
+           images: dpgraham4401/${{env.IMAGE_NAME}}
+
+       - name: Set up QEMU
+         uses: docker/setup-qemu-action@v2
+
+       - name: Set up Docker Buildx
+         uses: docker/setup-buildx-action@v2
+
+       - name: Login to DockerHub
+         uses: docker/login-action@v2
+         with:
+           username: ${{ secrets.DOCKER_HUB_USERNAME }}
+           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+       - name: Build and push
+         uses: docker/build-push-action@v3
+         with:
+           context: .
+           platforms: linux/amd64,linux/arm64
+           push: true
+           tags: ${{ steps.meta.outputs.tags }}
+           labels: ${{ steps.meta.outputs.labels }}
+
+#   deploy_docker_to_k8:
 #     needs: build_docker_image
 #     runs-on: ubuntu-latest
 #     steps:
@@ -76,4 +78,4 @@
 #         env:
 #           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
 #         with:
-#           args: set image -n dpgraham deployments.apps/dpgraham dpgraham=dpgraham4401/dpgraham:${{steps.tag.outputs.tag}}
+#           args: set image -n ${{env.env.IMAGE_NAME}} deployments.apps/${{env.IMAGE_NAME}} ${{env.IMAGE_NAME}}=dpgraham4401/${{DOCKER_IMAGE_NEW}}:${{steps.tag.outputs.tag}}
