fixes to gin.Engine

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,13 @@
 # configs
 .editorconfig
-
-# Misc
+.env.example
 .dockerignore
+
+# Documentation
+README.md
+docs/
 
 # Git
 .github
 .gitignore
+.git/
