add namespace and service.yaml

--- a/dpg-server/templates/deployment.yaml
+++ b/dpg-server/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "dpg-server.fullname" . }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "dpg-server.labels" . | nindent 4 }}
 spec:
