--- a/dpg-server/templates/service.yaml
+++ b/dpg-server/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "dpg-server.fullname" . }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "dpg-server.labels" . | nindent 4 }}
 spec:
