strip a number of helm aspects for simplicity

--- a/dpg-server/Chart.yaml
+++ b/dpg-server/Chart.yaml
@@ -2,14 +2,25 @@ apiVersion: v2
 name: dpg-server
 description: A Helm chart to deploy dpgraham-server to the local home-lab cluster
 
-# A chart can be either an 'application' or a 'library' chart.
+# notes for me:
+# 1.
+# if I install with release name foo (helm install . foo)
+# {{ include "dpg-server.fullname" . }} evaluates to foo-dpg-server (where "dpg-server" comes from the chart.yaml name)
+#
+# 2.
+# {{- include "dpg-server.labels" . | nindent 4 }} adds a bunch of labels like
+#  app.kubernetes.io/instance=foo
+#  app.kubernetes.io/managed-by=Helm
+#  app.kubernetes.io/name=dpg-server
+#  app.kubernetes.io/version=0.0.3
+#  helm.sh/chart=dpg-server-0.0.3
+
 type: application
 
 # both version should be incremented upon change
-
 # This is the chart version.
-version: 0.1.0
+version: 0.0.3
 
 # This is the version number of the application being deployed.
-# This will also act as default container tag if not specified
-appVersion: "0.1.0"
+# This will also act as default container tag if not specified in Values.yaml
+appVersion: "0.0.3"
