http -> https redirect, TLS with let's encrypt cert-manager (already deployed), ingress-route.yaml, config.yaml, secrets for DB_USER an DB_PASSWORD

--- a/dpg-server/templates/deployment.yaml
+++ b/dpg-server/templates/deployment.yaml
@@ -29,3 +29,17 @@ spec:
             - name: http
               containerPort: {{ .Values.image.port }}
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: {{ include "dpg-server.fullname" . }}-config
+          env:
+            - name: DPG_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: db_password
+                  name: {{ .Release.Name }}-auth
+            - name: DPG_DB_USER
+              valueFrom:
+                secretKeyRef:
+                  key: db_user
+                  name: {{ .Release.Name }}-auth
