--- a/dpg-server/values.yaml
+++ b/dpg-server/values.yaml
@@ -2,16 +2,18 @@
 # Declare variables to be passed into your templates.
 # values can be access via {{ .Value.<first_level_yaml>.<second_level_yaml> }}
 
-
 replicaCount: 1
 
+db_password: replace_this_password_with_set_flag
+db_user: replace_this_username_with_set_flag
+
 namespace:
-  name: dpg-server
+  name: dpgserver
 
 image:
   repository: dpgraham4401
   imageName: dpg-server
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   port: 8080
   # Overrides the image tag whose default is the chart appVersion (i.e., should be the git/release tag)
   tag: "v0.0.3"
@@ -47,23 +49,27 @@ service:
   type: ClusterIP
   port: 80
 
+middleware:
+  name: httpredirect
+
 ingress:
   enabled: true
-  className: ""
+  className: "traefik"
   annotations: {
     kubernetes.io/ingress.class: traefik
-#    traefik.ingress.kubernetes.io/router.middlewares: dpgraham-redirecthttp@kubernetescrd
   }
+  # I'm using the below 2 values until I figure out the intended way to use things like arrays from Values.yaml
   host: dpgraham.com
+  secretName: le-prod
   hosts:
     - host: dpgraham.com
       paths:
         - path: /
           pathType: ImplementationSpecific
-#  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+#  tls:
+#    - secretName: le-prod
+#      hosts:
+#        - chart-example.local
 
 resources: {}
   #   cpu: 100m
