--- a/dpg-server/Chart.yaml
+++ b/dpg-server/Chart.yaml
@@ -1,19 +1,6 @@
 apiVersion: v2
 name: dpg-server
-description: A Helm chart to deploy dpgraham-server to the local home-lab cluster
-
-# notes for me:
-# 1.
-# if I install with release name foo (helm install . foo)
-# {{ include "dpg-server.fullname" . }} evaluates to foo-dpg-server (where "dpg-server" comes from the chart.yaml name)
-#
-# 2.
-# {{- include "dpg-server.labels" . | nindent 4 }} adds a bunch of labels like
-#  app.kubernetes.io/instance=foo
-#  app.kubernetes.io/managed-by=Helm
-#  app.kubernetes.io/name=dpg-server
-#  app.kubernetes.io/version=0.0.3
-#  helm.sh/chart=dpg-server-0.0.3
+description: A Helm chart to deploy dpgraham-server to the local home-lab cluster "Gaea"
 
 type: application
 
