add api prefix to all routes

--- a/dpg-server/Chart.yaml
+++ b/dpg-server/Chart.yaml
@@ -4,10 +4,9 @@ description: A Helm chart to deploy dpgraham-server to the local home-lab cluste
 
 type: application
 
-# both version should be incremented upon change
-# This is the chart version.
-version: 0.0.3
+# Both version should be incremented upon change
 
-# This is the version number of the application being deployed.
-# This will also act as default container tag if not specified in Values.yaml
-appVersion: "0.0.3"
+# This is the charts version.
+version: 0.0.3
+# The appVersion will act as default docker image tag if not specified in Values.yaml
+appVersion: "v0.0.3"
