--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -5,18 +5,37 @@ on:
   workflow_call:
     inputs:
       context:
-        required: true
+        required: false
+        default: .
         type: string
         description: 'The context to use for the Docker build.'
       image_name:
         required: true
         type: string
         description: 'The name of the image to build.'
+  workflow_dispatch:
+    inputs:
+        context:
+            required: false
+            default: .
+            type: string
+            description: 'The context to use for the Docker build.'
+        image_name:
+            required: true
+            type: string
+            description: 'The name of the image to build.'
+        image_tag:
+            required: true
+            type: string
+            description: 'The tag to use for the Docker image.'
 
 jobs:
   build_docker_image:
     needs: test_package
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.context }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
