--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,11 @@ name: Run tests
 # Run go test when commits are pushed to any branch 
 #  or there's a pull request to main
 
+env:
+  POSTGRES_USER: dg
+  POSTGRES_PASSWORD: password123
+  POSTGRES_DB: dpgraham_test
+
 on:
   push:
     branches: 
@@ -14,8 +19,23 @@ on:
 
 
 jobs:
-  test_package:
+  run_all_tests:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Install Go
@@ -31,6 +51,14 @@ jobs:
 
       - name: Build
         run:  go build -v ./...
+
+      - name: configure environment
+        run: |
+          echo "export DPG_BD_HOST=localhost" >> $GITHUB_ENV
+          echo "export DPG_BD_PORT=5432" >> $GITHUB_ENV
+          echo "export DPG_BD_USER=${{ env.POSTGRES_USER }}" >> $GITHUB_ENV
+          echo "export DPG_BD_PASSWORD=${{ env.POSTGRES_PASSWORD }}" >> $GITHUB_ENV
+          echo "export DPG_BD_NAME=${{ env.POSTGRES_DB }}" >> $GITHUB_ENV
 
       - name: Run functional tests
         run:  go test -v ./...
