--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ tmp/
 
 # Test binary, built with `go test -c`
 *.test
+!configs/env.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
