--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,5 +1,5 @@
-DPG_DB_HOST=tierra
-DPG_DB_PORT=5432
-DPG_DB_NAME=dpgraham_v1
-DPG_DB_USER=dg
-DPG_DB_PASSWORD=password
+DB_HOST=tierra
+DB_PORT=5432
+DB_NAME=dpgraham_v1
+DB_USER=dg
+DB_PASSWORD=password
