update build and push to GCP triggers

--- a/.github/workflows/gcp-build-artifact.yaml
+++ b/.github/workflows/gcp-build-artifact.yaml
@@ -11,6 +11,9 @@
 name: Docker build and push to Artifact Registry
 
 on:
+  push:
+    branches:
+      - main
   release:
     types: [published]
 
