Docs and automation (#20)
* reconfigure old build to push to GitHub, rename workflows, remove release workflow

* add name to job for UI readability

* use repo as image name

* add docs section on ci-cd and devops

* add tools and frameworks section to source-design docs

* add initial system architecture section, update root README, add system on GCP diagram

--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -13,6 +13,7 @@ defaults:
 
 jobs:
   terraform_apply:
+    name: Terraform Apply
     environment: staging
     runs-on: ubuntu-latest
     steps:
