--- a/.github/workflows/build-gcp-image.yaml
+++ b/.github/workflows/build-gcp-image.yaml
@@ -15,7 +15,7 @@ on:
     branches:
       - main
   release:
-    types: [published]
+    types: [ published ]
 
 env:
   PROJECT_ID: dpgraham
@@ -25,6 +25,7 @@ env:
 
 jobs:
   build-push:
+    name: Build Image for GCP
     environment: staging
     permissions:
       contents: 'read'
