--- a/.github/workflows/draft-release.yaml
+++ b/.github/workflows/draft-release.yaml
@@ -13,6 +13,7 @@ permissions:
 
 jobs:
   update_release_draft:
+    name: Update Changelog
     permissions:
       # write permission is required to update the release draft
       contents: write
