--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -13,6 +13,7 @@ permissions:
 
 jobs:
   terraform_plan:
+    name: Terraform Plan
     environment: staging
     runs-on: ubuntu-latest
     permissions:
