--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ on:
 
 jobs:
   run_all_tests:
+    name: Run Tests
     runs-on: ubuntu-latest
 
     services:
@@ -39,7 +40,7 @@ jobs:
 
     steps:
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: 1.20.5
 
@@ -47,10 +48,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fetch required Go modules
-        run:  go mod download
+        run: go mod download
 
       - name: Build
-        run:  go build -v ./...
+        run: go build -v ./...
 
       - name: configure environment
         run: |
@@ -61,4 +62,4 @@ jobs:
           echo "export DPG_BD_NAME=${{ env.POSTGRES_DB }}" >> $GITHUB_ENV
 
       - name: Run functional tests
-        run:  go test -v ./...
+        run: go test -v ./...
