go project structure (#35)
* rename root module to website name

* move all packages into pkg folder

* cmd directory

* rename dpg-server to helm for clarity

--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=dpgraham
-DB_USER=dg
-DB_PASSWORD=password123
+export DB_HOST=localhost
+export DB_PORT=5432
+export DB_NAME=dpgraham
+export DB_USER=dg
+export DB_PASSWORD=password123
