--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=dpgraham
-DB_USER=dg
-DB_PASSWORD=password123
+export DB_HOST=localhost
+export DB_PORT=5432
+export DB_NAME=dpgraham
+export DB_USER=dg
+export DB_PASSWORD=password123
