--- a/.github/workflows/cloud-run-deploy.yaml
+++ b/.github/workflows/cloud-run-deploy.yaml
@@ -1,5 +1,11 @@
 # Reusable Workflow to deploy a new revision to Cloud Run
 
+# Prerequisites:
+# 1. Create service account
+#   1a. Service Account Token Creator
+# 2. Setup Workload Identity Federation Provider for the service account using GitHub's OIDC provider
+#   2a. https://youtu.be/ZgVhU5qvK1M  for a video overview on Workload Identity Federation Providers
+
 name: Deploy to Cloud Run
 
 on:
@@ -29,6 +35,7 @@ env:
 
 jobs:
   deploy:
+    if: github.repository == 'dpgraham-com/dpgraham-server'
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     permissions:
@@ -36,14 +43,15 @@ jobs:
       id-token: 'write'
 
     steps:
-      - uses: 'actions/checkout@v3'
-
+      - name: Checkout
+        uses: 'actions/checkout@v3'
 
       - name: Authenticate Google Cloud
         uses: google-github-actions/auth@v1
         id: auth
         with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
+          service_account: ${{ secrets.SA_EMAIL }}
           token_format: 'access_token'
 
       - name: Deploy to Cloud Run
