--- a/.github/workflows/build-ghcr-image.yaml
+++ b/.github/workflows/build-ghcr-image.yaml
@@ -1,6 +1,7 @@
-name: 'Build Image for GitHub Container Registry'
 # This workflow will build a docker image, tag it, and push it to the GitHub Container Registry
 # - It will name the image the same as the repository name
+
+name: 'Build Image for GitHub Container Registry'
 
 on:
   workflow_call:
@@ -8,6 +9,7 @@ on:
 jobs:
   build_docker_image:
     name: Build Image for GHCR
+    if: github.repository == 'dpgraham-com/dpgraham-server'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
