--- a/.github/workflows/release-dev.yaml
+++ b/.github/workflows/release-dev.yaml
@@ -1,30 +1,34 @@
-# This Workflow deploys a Docker image to Google Cloud Run
+# This Workflow builds and deploys to the Development environment
 
-name: On Release
+name: Release to Development
 
 on:
-  release:
-    types: [ published ]
+  push:
+    branches:
+      - main
 
 jobs:
   build_gcp_image:
+    if: github.repository == 'dpgraham-com/dpgraham-server'
     name: Build Image for GCP
     uses: ./.github/workflows/build-gcp-image.yaml
     with:
-      environment: production
+      environment: development
     secrets: inherit
 
   deploy_to_cloud_run:
+    if: github.repository == 'dpgraham-com/dpgraham-server'
     name: Deploy to Cloud Run
     uses: ./.github/workflows/cloud-run-deploy.yaml
     needs: build_gcp_image
     with:
-      environment: production
+      environment: development
       version: ${{ needs.build_gcp_image.outputs.version }}
-      service: dpgraham-server
+      service: server-dev
     secrets: inherit
 
   build_ghcr_image:
+    if: github.repository == 'dpgraham-com/dpgraham-server'
     name: Build Image for GHCR
     uses: ./.github/workflows/build-ghcr-image.yaml
     secrets: inherit
