--- a/.github/workflows/release-prod.yaml
+++ b/.github/workflows/release-prod.yaml
@@ -11,6 +11,8 @@ jobs:
   build_gcp_image:
     name: Build Image for GCP
     if: github.repository == 'dpgraham-com/dpgraham-server'
+    permissions:
+      id-token: 'write'
     uses: ./.github/workflows/build-gcp-image.yaml
     with:
       environment: production
@@ -19,6 +21,8 @@ jobs:
   deploy_to_cloud_run:
     name: Deploy to Cloud Run
     if: github.repository == 'dpgraham-com/dpgraham-server'
+    permissions:
+      id-token: 'write'
     uses: ./.github/workflows/cloud-run-deploy.yaml
     needs: build_gcp_image
     with:
