--- a/.github/workflows/release-dev.yaml
+++ b/.github/workflows/release-dev.yaml
@@ -42,5 +42,6 @@ jobs:
   build_ghcr_image:
     name: Build Image for GHCR
     if: github.repository == 'dpgraham-com/dpgraham-server'
+    permissions: write-all
     uses: ./.github/workflows/build-ghcr-image.yaml
     secrets: inherit
